--- a/ExeRibeiroCiprianoIV/Views/Home/Create.cshtml
+++ b/ExeRibeiroCiprianoIV/Views/Home/Create.cshtml
@@ -4,11 +4,12 @@
     ViewBag.Title = "Create";
 }
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.8.0/css/bootstrap-datepicker3.min.css">
 
 @using (Html.BeginForm("ClienteCadastrado", "Home", FormMethod.Post, new { id = "frm" }))
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h1>Cadastre um cliente</h1>
         <hr />
@@ -72,23 +73,38 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DataCadastro, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DataCadastro, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.DataCadastro, new { htmlAttributes = new { @class = "form-control date-picker", placeholder= "dd/mm/yyyy" } })
                 @Html.ValidationMessageFor(model => model.DataCadastro, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Cadastrar" class="btn btn btn-primary" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Cancelar", "Index")
 </div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/js/bootstrap-datepicker.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.min.js"></script>
+    <script type="text/javascript">
+        $(function () {
+            $('.date-picker').datepicker({
+                changeMonth: true,
+                format: 'dd/mm/yyyy',
+                changeYear: true,
+                language: "tr",
+                todayHighlight: true,
+            });
+
+
+        });
+    </script>
 }
